# zmk-component-underdongle

./: CMakeLists.txt  Kconfig  README.md  west.yml
boards/shields/underdongle_adapter/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  underdongle_adapter.conf  underdongle_adapter.overlay
boards/shields/underdongle_adapter/boards/: xiao_ble.overlay
boards/shields/underdongle_adapter/include/: fonts.h  hid.h
boards/shields/underdongle_adapter/src/: brightness.c  custom_status_screen.c  display_init.c  display_rotate_init.c  hid.c
boards/shields/underdongle_adapter/src/fonts/: cascadia_digits_28.c  cascadia_fa_16.c  cascadia_fa_32.c  cascadia_latin_ru_fa_14.c
boards/shields/underdongle_adapter/src/widgets/: CMakeLists.txt  battery.c  battery.h  caps.c  caps.h  layer.c  layer.h  layout.c  layout.h  modifier_indicator.c  modifier_indicator.h  modifiers.c  modifiers.h  time.c  time.h  volume.c  volume.h
drivers/display/: CMakeLists.txt  display_st7789v.c
include/zmk/events/: caps_word_state_changed.h  split_central_status_changed.h
src/behaviors/: behavior_caps_word.c
src/events/: caps_word_state_changed.c  split_central_status_changed.c
src/split/bluetooth/: central_status_changed_observer.c
zephyr/: module.yml
